charon/tests/ui/associated_types/issue-1068-gat-with-assoc-ty.out
error: GATs cannot work with the `--lift-associated-types` option (implied by `--preset=aeneas`). Either stop using this option or `--exclude` this trait.
 --> tests/ui/associated_types/issue-1068-gat-with-assoc-ty.rs:7:1
  |
7 | / pub trait Bar {
8 | |     type Item<T>: Foo;
9 | | }
  | |_^

ERROR Charon failed to translate this code (1 errors)
